# fast_zero

./: .env  .gitignore  Dockerfile  compose.yaml  logs_test.txt  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 61d39b44c0f3_create_users_table.py  6cc42b556673_adcionar_field_updated_at.py  904d53711558_implement_bidirectional_relationship_.py  93416d1b8ff4_create_todos_tab.py
src/fast_zero/: app.py  database.py  db_models.py  schemas.py  security.py
src/fast_zero/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todo.py  test_users.py
